--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         
         h1,
         h2,
-        h3 {
+        h4 {
             line-height: 1.1
         }
     </style>
@@ -36,6 +36,7 @@
         <li>Learn how to build a website</li>
         <li>Find an apropos Alan Kay quote</li>
         <li>Stop using words like "apropos"</li>
+        <li>Add some more things to this list</li>
         <li>Other stuff...</li>
     </ul>
 </body>
