A silly and insignificant addition to my website.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <li>Learn how to build a website</li>
         <li>Find an apropos Alan Kay quote</li>
         <li>Stop using words like "apropos"</li>
-        <li>Add some more things to this list</li>
+        <li>And I should probably add something about Yegor Bugayenko because he's a bit of a ledge.</li>
         <li>Other stuff...</li>
     </ul>
 </body>
