When will I start being serious about this website thing?

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <li>Find an apropos Alan Kay quote</li>
         <li>Stop using words like "apropos"</li>
         <li>And I should probably add something about Yegor Bugayenko because he's a bit of a ledge.</li>
+        <li>(Yes, I'm a shameless fanboy.)</li>
         <li>Other stuff...</li>
     </ul>
 </body>
