--- a/index.html
+++ b/index.html
@@ -36,8 +36,12 @@
         <li>Learn how to build a website</li>
         <li>Find an apropos Alan Kay quote</li>
         <li>Stop using words like "apropos"</li>
-        <li>And I should probably add something about Yegor Bugayenko because he's a bit of a ledge.</li>
-        <li>(Yes, I'm a shameless fanboy.)</li>
+        <li>Write about some of the most interesting software-y people around:</li>
+            <ul>
+                <li>Kevlin Henney</li>
+                <li>Yegor Bugayenko</li>
+                <li>James Marcus Bach</li>
+            </ul>
         <li>Other stuff...</li>
     </ul>
 </body>
