Another tiny change.
(Messing about with GitHub...)

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <li>Kevlin Henney</li>
                 <li>Yegor Bugayenko</li>
                 <li>James Marcus Bach</li>
+                <li>Bret Victor</li>
             </ul>
         <li>Other stuff...</li>
     </ul>
