--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 <li>Yegor Bugayenko</li>
                 <li>James Marcus Bach</li>
                 <li>Bret Victor</li>
+                <li>Dave Ackley</li>
             </ul>
         <li>Other stuff...</li>
     </ul>
