Adding link to blog

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <h2>Stuff To Do</h2>
     </p>
     <ul>
-        <li>Learn how to build a website</li>
+        <li><a href="http://blog.notquiteafield.com/">Learn how to build a website</a></li>
         <li>Find an apropos Alan Kay quote</li>
         <li>Stop using words like "apropos"</li>
         <li>Write about some of the most interesting software-y people around:</li>
