--- a/index.html
+++ b/index.html
@@ -30,21 +30,12 @@
         <h4>- (Not yet) A Blog by John Page (Not quite a programmer)</h4>
     </header>
     <hr>
-    <h2>Stuff To Do</h2>
+    <h2>This site is</h2>
     </p>
     <ul>
-        <li><a href="http://blog.notquiteafield.com/">Learn how to build a website</a></li>
-        <li>Find an apropos Alan Kay quote</li>
-        <li>Stop using words like "apropos"</li>
-        <li>Write about some of the most interesting software-y people around:</li>
-            <ul>
-                <li>Kevlin Henney</li>
-                <li>Yegor Bugayenko</li>
-                <li>James Marcus Bach</li>
-                <li>Bret Victor</li>
-                <li>Dave Ackley</li>
-            </ul>
-        <li>Other stuff...</li>
+        <li>A work in progress</li>
+        <li>An abject failure</li>
+        <li>(Take your pick)</li>
     </ul>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
