Watch this space...

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <ul>
         <li>A work in progress</li>
         <li>An abject failure</li>
-        <li>(Take your pick)</li>
+        <li>(Take your pick, but also watch this space...)</li>
     </ul>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
